# chum

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  lint.yml  release.yml
crates/chum-broker/: Cargo.toml
crates/chum-broker/src/: lib.rs
crates/chum-cli/: Cargo.toml
crates/chum-cli/src/: error.rs  main.rs  output.rs  term.rs
crates/chum-cli/src/commands/: daemon.rs  daemon_service.rs  doctor.rs  env.rs  install.rs  list.rs  logs.rs  mod.rs  permissions.rs  permit.rs  restart.rs  revoke.rs  search.rs  start.rs  status_process.rs  stop.rs  uninstall.rs
crates/chum-cli/tests/: broker.rs  daemon_service.rs  env.rs  install_fixture.rs  list_fixture.rs  search.rs  uninstall_fixture.rs
crates/chum-cli/tests/common/: mod.rs
crates/chum-cli/tests/fixtures/: chum-local-runnable.toml  chum-local-test.toml.template
crates/chum-core/: Cargo.toml
crates/chum-core/src/: error.rs  lib.rs
crates/chum-core/src/manifest/: mod.rs  parse.rs  permissions.rs  validate.rs
crates/chum-core/tests/: manifest.rs
crates/chum-core/tests/fixtures/: chum-brave-search.toml  chum-filesystem.toml  chum-local-dev.toml  chum-postgres-remote.toml  chum-sqlite.toml  invalid-bad-name.toml  invalid-binary-no-checksum.toml  invalid-bind-zero.toml  invalid-unknown-schema.toml
crates/chum-daemon/: Cargo.toml
crates/chum-daemon/src/: error.rs  lib.rs
crates/chum-daemon/src/ipc/: client.rs  mod.rs  server.rs
crates/chum-daemon/src/supervisor/: mod.rs  process.rs  restart.rs
crates/chum-daemon/tests/: daemon_binary.rs  lifecycle.rs  supervisor.rs
crates/chum-daemon/tests/fixtures/: fake-mcp.sh
crates/chum-install/: Cargo.toml
crates/chum-install/src/: error.rs  fetcher.rs  install.rs  lib.rs  paths.rs
crates/chum-install/src/sources/: binary.rs  local.rs  mod.rs  npm.rs
crates/chum-install/tests/: first_party_manifests.rs  install.rs
crates/chum-install/tests/fixtures/: fake-npm.sh
crates/chum-registry/: Cargo.toml
crates/chum-registry/src/: error.rs  lib.rs  registry.rs  schema.rs  types.rs
crates/chum-registry/tests/: crud.rs  grants.rs  open_and_migrations.rs
crates/chum-registry/tests/common/: mod.rs
docs/: ARCHITECTURE.md  BROKER_DESIGN.md  MANIFEST_SPEC.md
manifests/: chum-brave-search.toml  chum-everything.toml  chum-filesystem.toml  chum-github.toml  chum-memory.toml  chum-postgres.toml  chum-puppeteer.toml  chum-redis.toml  chum-sequential-thinking.toml  chum-slack.toml
scripts/: setup-test-fixture.sh
