# CHUM workspace root.
#
# Members are added crate-by-crate as the scaffold lands. `chum-core` ships
# first because it has no dependencies on the rest of the workspace and
# anchors the shared types the other crates will pull from.

[workspace]
members = [
    "crates/chum-core",
    "crates/chum-cli",
    "crates/chum-daemon",
    "crates/chum-broker",
    "crates/chum-registry",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Karoshi"]
repository = "https://github.com/agent-chum/chum"

# Centralised dependency versions. Crates opt in via `dep.workspace = true`.
# Unused entries here are free — Cargo only resolves them when a member crate
# references them.
[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
