# CHUM workspace root.
#
# Members are added crate-by-crate as the scaffold lands. `chum-core` ships
# first because it has no dependencies on the rest of the workspace and
# anchors the shared types the other crates will pull from.

[workspace]
members = [
    "crates/chum-core",
    "crates/chum-cli",
    "crates/chum-daemon",
    "crates/chum-broker",
    "crates/chum-registry",
    "crates/chum-install",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Karoshi"]
repository = "https://github.com/agent-chum/chum"

# Centralised dependency versions. Crates opt in via `dep.workspace = true`.
# Unused entries here are free — Cargo only resolves them when a member crate
# references them.
[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chum-core = { path = "crates/chum-core" }
chum-install = { path = "crates/chum-install" }
chum-registry = { path = "crates/chum-registry" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
nix = { version = "0.29", default-features = false, features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
