[package]
name = "chum-broker"
description = "CHUM capability broker — gates all agent ↔ MCP server access. Per-tool grants, scoped secrets, path allowlists."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chum-core.workspace = true
chum-registry.workspace = true

[dev-dependencies]
chrono.workspace = true
