[package]
name = "chum-cli"
description = "User-facing CLI for CHUM — the local-first MCP package manager."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "chum"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
