[package]
name = "chum-core"
description = "Shared types, manifest parsing, and signing primitives for CHUM."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
