[package]
name = "chum-install"
description = "Install-time I/O for CHUM manifests — npm / local / binary source handling, fetch, checksum, extract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Exposes `chum_install::fetcher::test_support::MockFetcher` and any other
# test-only helpers. Off by default; downstream consumers (and this crate's
# own integration tests, via [[test]] required-features) opt in explicitly
# so production code cannot accidentally depend on test scaffolding.
test-support = []

[dependencies]
chum-core.workspace = true
flate2.workspace = true
reqwest.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "install"
required-features = ["test-support"]
