[package]
name = "chum-registry"
description = "CHUM local install-record store. Read-write SQLite. Persists InstalledArtifact rows, version pins, dependency graph."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
chum-install.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
